tests/files/parser_tests/should_fail/028.cmdr
//Should not parse due to unterminated parameters
adda, b) {
    return a + b;
}
